# litestar-workbench

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO  docker-compose.yml  pyproject.toml
docs/: LESSONS_GUIDE.md  LESSONS_SPEC.md  learning_plan.md
docs/dddguard/: config.yaml
lessons/0_platform/: volume.yaml
lessons/0_platform/0_guide/: chapter.yaml
lessons/1_http/: volume.yaml
lessons/1_http/1_routing/: chapter.yaml
lessons/1_http/2_controllers/: chapter.yaml
lessons/1_http/3_request/: chapter.yaml
lessons/1_http/4_responses/: chapter.yaml
lessons/2_app/: volume.yaml
lessons/2_app/1_state_lifecycle/: chapter.yaml
lessons/2_app/2_openapi_cli/: chapter.yaml
lessons/2_app/3_dto/: chapter.yaml
lessons/2_app/4_testing/: chapter.yaml
lessons/2_app/5_config/: chapter.yaml
lessons/3_architecture/: volume.yaml
lessons/3_architecture/1_di/: chapter.yaml
lessons/3_architecture/2_middleware/: chapter.yaml
lessons/3_architecture/3_security/: chapter.yaml
lessons/4_data/: volume.yaml
lessons/4_data/1_stores/: chapter.yaml
lessons/4_data/2_sqlalchemy/: chapter.yaml
lessons/5_frontend/: volume.yaml
lessons/6_production/: volume.yaml
src/app/: config.py  main.py  provider.py
src/app/controllers/: __init__.py  api.py  home.py  lesson.py  volume.py
src/app/models/: __init__.py  chapter.py  scenario.py
src/app/services/: __init__.py  executor.py  log_streamer.py  process_manager.py  scanner.py  workspace.py
src/ui/: package-lock.json  package.json
src/ui/templates/: base.html  home.html  lesson.html  volume.html
(+316 files in other folders)
