[project]
name = "s1t-litestar-workbench"
version = "0.1.0"
description = "S1T Litestar Workbench — interactive learning platform for Litestar framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar[jinja,standard,jwt]>=2.20",
    "uvicorn[standard]>=0.41.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "markdown>=3.6",
    "pymdown-extensions>=10.8",
    "pygments>=2.18",
    "loguru>=0.7.3",
    "structlog>=24.1",
    "pydantic-settings>=2.5",
    "websockets>=12.0",
    "dishka>=1.3",
    "typing-extensions>=4.15.0",
    "aio-pika>=9.6.1",
    "valkey[asyncio]>=6.0",
    "asyncpg>=0.29",
]

[project.scripts]
s1t-litestar = "app.main:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/ui", "lessons"]
